--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 
   --primary_color: #55daeb;
   --secondary_color: #ff5757;
-  --text_color: #ffffff;
+  --text_color: #2d2424;
   --hover_color: #000000;
   overflow-x: hidden;
 }
@@ -50,14 +50,20 @@ body {
   height: 40px;
   text-align: center;
 }
+
+/* COMMON CLASSES */
+.cursor_pointer {
+  cursor: pointer;
+}
+
 /* Main Application Style */
 /* NAVBAR STYLE */
 
 .navbar_wrapper {
-  /* background: #fff; */
-  background: -webkit-linear-gradient(to left, #ff5757, #ff5757, #55daeb);
-  background: linear-gradient(to left, #ff5757, #ff5757, #55daeb);
-  box-shadow: 0 3px 16px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  background: #fff;
+  background: -webkit-linear-gradient(to left, #ffffff, #ffffff, #55daeb);
+  background: linear-gradient(to left, #ffffff, #ffffff, #55daeb);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   display: flex;
   height: 5rem;
   flex-direction: row;
@@ -131,24 +137,20 @@ body {
   font-family: "Cinzel", serif;
   font-weight: 600;
   /* border: 2px solid #8cbec6; */
-  margin: 32px;
+  margin: 8px;
   color: #892323;
-  padding: 4px;
-  border-image: linear-gradient(
-      90deg,
-      var(--primary_color),
-      var(--secondary_color)
-    )
-    1;
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 8px;
+  /* padding: 4px; */
+  /* border-image: linear-gradient( 90deg, var(--primary_color), var(--secondary_color) ) 1; */
+  /* border-style: solid; */
+  /* border-width: 2px; */
+  /* border-radius: 8px; */
+  font-size: 22px;
 }
 
 /* HOME STYLE */
 
 .box-1 {
-  height: 80vh;
+  height: 70vh;
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -156,12 +158,14 @@ body {
   display: table;
   background-attachment: fixed;
 }
+
 .box-2 {
-  height: 100vh;
-  width: 100%;
+  height: 80vh;
+  width: 50%;
   background-size: cover;
   background-position: center;
   display: table;
+  float: right;
   background-attachment: fixed;
   background-image: url("https://images.pexels.com/photos/7725990/pexels-photo-7725990.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
@@ -177,30 +181,65 @@ body {
 
   /* background-image:url("./assets/furry_town_pet_group.jpeg"); */
 }
+.box-1-content {
+  display: flex;
+  flex-direction: row;
+}
+.box-1-content > .box-1-content-right {
+  width: 50%;
+}
 .parallax_text {
   color: #fff;
   margin: 0px;
   text-align: left;
   display: table-cell;
   vertical-align: middle;
+  padding: 0 4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 5rem;
+}
+.background_image_wave {
+  background-image: url("../src/assets/wave_home.svg");
+  background-repeat: no-repeat;
+  z-index: -2;
 }
 
 .text_boxshadow {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  background-color: #fff;
-  color: var(--hover_color);
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
+  background: #bdc3c7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+
+    #ffffff,
+    #bdc3c7
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+
+    #ffffff,
+    #bdc3c7
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   border-radius: 8px;
-  padding: 4rem;
-  opacity: 0.8;
+  padding: 3rem;
+  color: var(--hover_color);
+
+  opacity: 0.8 ;
   font-size: 24px;
   font-weight: 800;
-  width: 64vw;
-  margin: 6vw;
+  width: 50%;
+  float: right;
 }
-.pet_home{
-    display: flex;
-    align-items: center;
-    align-content: center;
+.text_boxshadow > .dog {
+  opacity: 1;
+}
+
+.pet_home {
+  display: flex;
+  align-items: center;
+  align-content: center;
 }
 .pet_home > img {
   height: 44px;
@@ -208,4 +247,16 @@ body {
   border-radius: 50vh;
   border: 2px solid var(--primary_color);
   margin: 8px;
+}
+.pet_home:hover {
+  color: var(--primary_color);
+  transition: 0.5s;
+}
+
+.primary_header {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  letter-spacing: -0.02em;
 }
